--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-gevent
-bottle
-cherrypy
-nose
+bottle==0.12.8
+CherryPy==3.7.0
+gevent==1.0.1
+greenlet==0.4.5
+nose==1.3.6
+rethinkdb==2.0.0.post1
